--- a/src/styles/_html.scss
+++ b/src/styles/_html.scss
@@ -1,3 +1,5 @@
+@use "@angular/material" as mat;
+
 *,
 *::before,
 *::after {
@@ -6,7 +8,7 @@
 
 * {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Roboto, Arial, sans-serif;
 }
 
 html,
@@ -31,4 +33,10 @@ canvas,
 svg {
   display: block;
   max-width: 100%;
+}
+
+// Anchor
+a {
+  color: var(--mat-sys-on-background);
+  text-decoration: none;
 }
