--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,3 +1,5 @@
+@use '@angular/material' as mat;
+
 :host {
   width: 100%;
 
@@ -6,18 +8,13 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
-    padding: 2% 0;
+    justify-content: space-between;
     border-bottom: 1px solid black;
+    padding: var(--var-spacing-2) var(--var-spacing-4);
+    background: var(--mat-sys-primary-container);
 
-    > menu > ul {
-      display: flex;
-      flex-direction: row;
-      list-style: none;
-      gap: 200px;
-      li {
-        // text-decoration: none;
-      }
+    > img {
+      height: var(--var-size-15);
     }
   }
 }
