--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -2,5 +2,13 @@
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+
+  app-footer {
+    position: relative;
+    bottom: 0;
+    left: 0;
+  }
 }
