chore: further basic HTML style setup

--- a/src/styles/_html.scss
+++ b/src/styles/_html.scss
@@ -1,4 +1,4 @@
-@use "@angular/material" as mat;
+@use '@angular/material' as mat;
 
 *,
 *::before,
@@ -9,11 +9,16 @@
 * {
   margin: 0;
   font-family: Roboto, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-tap-highlight-color: transparent;
 }
 
 html,
 body {
   height: 100%;
+  width: 100%;
+  padding: 0;
 }
 
 p,
