feat: app header setup

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -1,5 +1,7 @@
 <header>
-  <img src="favicon.ico" />
+  <div class="logo">
+    <a href="/"><img src="favicon.ico" /></a>
+  </div>
   <app-navigation />
   <app-menu />
 </header>
