feat: navigation component

--- a/src/components/navigation/navigation.html
+++ b/src/components/navigation/navigation.html
@@ -8,14 +8,14 @@
       </a>
     </li>
     <li>
-      <a routerLink="colors">
+      <a routerLink="favourites">
         <app-text-hover>
           <h1 custom-ripple>Favoriten</h1>
         </app-text-hover>
       </a>
     </li>
     <li>
-      <a routerLink="colors">
+      <a routerLink="cats">
         <app-text-hover>
           <h1 custom-ripple>Katzen</h1>
         </app-text-hover>
