--- a/src/styles/_html.scss
+++ b/src/styles/_html.scss
@@ -1,4 +1,5 @@
 @use '@angular/material' as mat;
+@use './variables' as *;
 
 *,
 *::before,
@@ -44,4 +45,19 @@ svg {
 a {
   color: var(--mat-sys-on-background);
   text-decoration: none;
+}
+
+p {
+  font-size: var(--var-size-3);
+  font-weight: 400;
+}
+
+h1 {
+  font-size: var(--var-size-7);
+  font-weight: 500;
+}
+
+h2 {
+  font-size: var(--var-size-6);
+  font-weight: 400;
 }
