--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,4 +1,13 @@
 :host {
-  height: inherit;
-  width: inherit;
+  display: flex;
+
+  .container-action {
+    display: flex;
+    flex-direction: row;
+    gap: var(--var-spacing-2);
+
+    > button {
+      margin-top: var(--var-spacing-5);
+    }
+  }
 }
