--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,6 +9,8 @@
   --var-spacing-8: 40px;
   --var-spacing-9: 48px;
   --var-spacing-10: 64px;
+  --var-spacing-11: 80px;
+  --var-spacing-12: 96px;
 
   --var-size-1: 12px;
   --var-size-2: 14px;
