feat: adjust navigation styling

--- a/src/components/navigation/navigation.html
+++ b/src/components/navigation/navigation.html
@@ -3,7 +3,7 @@
     <li>
       <a routerLink="home">
         <app-text-hover>
-          <h1 custom-ripple>Home</h1>
+          <h1 custom-ripple>Start</h1>
         </app-text-hover>
       </a>
     </li>
