--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,13 +1,13 @@
 :host {
-  display: flex;
-
-  .container-action {
-    display: flex;
-    flex-direction: row;
-    gap: var(--var-spacing-2);
-
-    > button {
-      margin-top: var(--var-spacing-5);
+  .container-content {
+    width: 50vw;
+    .container-action {
+      display: flex;
+      flex-direction: row;
+      gap: var(--var-spacing-2);
+      > button {
+        margin-top: var(--var-spacing-5);
+      }
     }
   }
 }
