feat: further modularization in generation-card. add spinner

--- a/src/components/generation-card/generation-card.html
+++ b/src/components/generation-card/generation-card.html
@@ -4,6 +4,7 @@
   </mat-card-header>
   <mat-card-content>
     <ng-content select="[generation-card-content]" />
+    <ng-content select="[generation-card-action]" />
   </mat-card-content>
   <mat-card-footer class="example-card-footer"></mat-card-footer>
 </mat-card>
