--- a/src/styles/_material-init.scss
+++ b/src/styles/_material-init.scss
@@ -1,12 +1,16 @@
-@use "@angular/material" as mat;
+@use '@angular/material' as mat;
 
+@mixin light-mode {
+  color-scheme: light;
+}
+
+/* Theme Setup */
 html {
   @include mat.theme(
     (
       color: (
         primary: mat.$rose-palette,
         tertiary: mat.$red-palette,
-        theme-type: light,
       ),
       typography: (
         plain-family: Roboto,
@@ -20,10 +24,14 @@ html {
   );
 }
 
+/* Global body theme application */
 body {
-  color-scheme: light;
-  background: var(--mat-sys-surface);
+  background: var(--mat-sys-surface-container);
   color: var(--mat-sys-on-surface);
   font: var(--mat-sys-body-medium);
-  margin: 0;
+  color-scheme: dark;
+
+  &.activate-light-mode {
+    @include light-mode;
+  }
 }
