docs: add apprentice documentation

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,9 @@
+<!--
+ Entry point for the angular-chuck-norris application.
+
+ See how the app is structured into header, content and footer.
+
+ The app-content is dynamically and shows the pages home, jokes, cats and favourites.  -->
 <app-header />
 <app-content />
 <app-footer />
