refactor: update application route to match current setup

--- a/src/components/navigation/navigation.html
+++ b/src/components/navigation/navigation.html
@@ -8,9 +8,9 @@
       </a>
     </li>
     <li>
-      <a routerLink="favourites">
+      <a routerLink="jokes">
         <app-text-hover>
-          <h1 custom-ripple>Favoriten</h1>
+          <h1 custom-ripple>Witze</h1>
         </app-text-hover>
       </a>
     </li>
@@ -18,6 +18,13 @@
       <a routerLink="cats">
         <app-text-hover>
           <h1 custom-ripple>Katzen</h1>
+        </app-text-hover>
+      </a>
+    </li>
+    <li>
+      <a routerLink="favourites">
+        <app-text-hover>
+          <h1 custom-ripple>Favoriten</h1>
         </app-text-hover>
       </a>
     </li>
