feat: ChuckJokesCard preparation for apprentice

--- a/src/components/chuck-jokes-card/chuck-jokes-card.html
+++ b/src/components/chuck-jokes-card/chuck-jokes-card.html
@@ -2,7 +2,7 @@
 <app-generation-card cardTitle="Chuck's Witze 💬">
   <ng-container generation-card-content>
     <div class="container-content">
-      <p>{{jokeString}}</p>
+      <p>{{jokeDisplayed}}</p>
     </div>
   </ng-container>
   <ng-container generation-card-action>
