--- a/src/pages/favourites/favourites.scss
+++ b/src/pages/favourites/favourites.scss
@@ -1,11 +1,19 @@
 :host {
   height: inherit;
   width: inherit;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  gap: var(--var-spacing-6);
 
   table {
     img {
       margin: var(--var-spacing-6);
       height: calc(2 * var(--var-size-15));
     }
+  }
+
+  .button-refresh {
+    width: calc(2 * var(--var-size-15));
   }
 }
