refactor: use global button UI

--- a/src/components/chuck-jokes-card/chuck-jokes-card.html
+++ b/src/components/chuck-jokes-card/chuck-jokes-card.html
@@ -7,11 +7,11 @@
   </ng-container>
   <ng-container generation-card-action>
     <div class="container-action">
-      <button (click)="fetchNewJoke();" matButton="filled">
+      <button (click)="fetchNewJoke();" matButton>
         <p>NEU</p>
         <mat-icon>autorenew</mat-icon>
       </button>
-      <button (click)="favouriseChucksJoke()" matButton="filled">
+      <button (click)="favouriseChucksJoke()" matButton>
         <p>FAVORISIEREN</p>
         <mat-icon>star</mat-icon>
       </button>
