--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,7 +1,7 @@
 :host {
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   padding: var(--var-spacing-3);
   background: var(--mat-sys-secondary);
 
