refacotr: rename model to content

--- a/src/components/jokes-table/jokes-table.html
+++ b/src/components/jokes-table/jokes-table.html
@@ -6,10 +6,10 @@
   </ng-container>
 
   <!-- Joke column -->
-  <ng-container matColumnDef="joke">
+  <ng-container matColumnDef="content">
     <th mat-header-cell *matHeaderCellDef>Inhalt</th>
     <td mat-cell *matCellDef="let element">
-      <p>{{element.joke}}</p>
+      <p>{{element.content}}</p>
     </td>
   </ng-container>
 
