refactor: rename button german

--- a/src/components/jokes-table/jokes-table.html
+++ b/src/components/jokes-table/jokes-table.html
@@ -34,6 +34,6 @@
 </table>
 
 <button (click)="refreshTable()" class="button-refresh" matFab extended aria-label="Table refresh button">
-  Refresh Table
+  AKTUALISIEREN
   <mat-icon>refresh</mat-icon>
 </button>
