feat: add commons license for picture

--- a/src/pages/home-page/home-page.scss
+++ b/src/pages/home-page/home-page.scss
@@ -56,8 +56,15 @@
         gap: var(--var-spacing-5);
       }
 
-      > img {
-        width: calc(2 * var(--var-size-15));
+      figure {
+        img {
+          width: calc(2 * var(--var-size-15));
+          border-radius: 10px;
+        }
+
+        figcaption {
+          font-size: small;
+        }
       }
     }
   }
