fix: content, header, footer positioning. responsive layouts

--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -1,7 +1,9 @@
 :host {
+  position: relative;
   height: inherit;
   width: inherit;
   display: flex;
+  overflow-y: auto;
   flex-direction: column;
   align-items: center;
   padding: var(--var-spacing-11);
