--- a/src/components/jokes-table/jokes-table.scss
+++ b/src/components/jokes-table/jokes-table.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: end;
   gap: var(--var-spacing-6);
+  padding-bottom: var(--var-spacing-6);
 
   table {
     img {
