--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,25 +1,29 @@
 @use '@angular/material' as mat;
 
 :host {
-  width: 100%;
+  width: inherit;
+  min-height: var(--var-size-14);
+  overflow: hidden;
 
   header {
-    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid black;
-    padding: var(--var-spacing-2) var(--var-spacing-4);
+    padding: var(--var-spacing-2) 0 var(--var-spacing-4) var(--var-spacing-4);
     background: var(--mat-sys-primary-container);
 
     > .logo {
       display: flex;
       height: var(--var-size-12);
-
       img {
         height: 100%;
       }
+    }
+
+    > app-menu {
+      margin-right: var(--var-spacing-4);
     }
   }
 }
