feat: modernize theme

--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -1,1 +1,6 @@
+<div class="container-left">
+  <a href="/"><p class="headline">Angular Chuck Norris Challenge</p></a>
+  <a [href]="innFactoryLink"><p>2025 innFactory GmbH</p></a>
+</div>
+
 <a [href]="githubRepoLink"><p>Github Projekt 🌟</p></a>
