--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -1,6 +1,7 @@
 <header>
   <div class="logo">
     <a href="/"><img src="favicon.ico" /></a>
+    <app-chat-bubble />
   </div>
   <app-navigation />
   <app-menu />
