--- a/src/components/navigation/navigation.html
+++ b/src/components/navigation/navigation.html
@@ -1,7 +1,7 @@
 <nav>
   <ul>
     <li>
-      <a routerLink="/">
+      <a routerLink="home">
         <app-text-hover>
           <h1 custom-ripple>Start</h1>
         </app-text-hover>
