--- a/src/styles/_html.scss
+++ b/src/styles/_html.scss
@@ -9,7 +9,7 @@
 
 * {
   margin: 0;
-  font-family: Roboto, Arial, sans-serif;
+  font-family: Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-tap-highlight-color: transparent;
@@ -41,7 +41,7 @@ svg {
 }
 
 p {
-  font-size: var(--var-size-4);
+  font-size: var(--var-size-3);
   font-weight: 400;
 }
 
