feat: disable user select for more qualitative feels.

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,7 +3,7 @@
 :host {
   width: inherit;
   min-height: var(--var-size-14);
-  // overflow: hidden;
+  user-select: none;
 
   header {
     display: flex;
