feat: add dark theme shadows

--- a/src/styles/_material-init.scss
+++ b/src/styles/_material-init.scss
@@ -1,7 +1,12 @@
 @use '@angular/material' as mat;
 
+/* Darkmode Setup */
 @mixin dark-mode {
   color-scheme: dark;
+
+  //Inverted shadows
+  --box-shadow-light: 4px rgba(255, 255, 255, 0.2);
+  --box-shadow-medium: 5px rgba(255, 255, 255, 0.4);
 }
 
 /* Theme Setup */
