feat: modernize footer styles

--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -1,5 +1,5 @@
 <div class="container-left">
-  <a href="/"><p class="headline">Angular Chuck Norris Challenge</p></a>
+  <p class="headline">Angular Chuck Norris Challenge</p>
   <a [href]="innFactoryLink"><p>2025 innFactory GmbH</p></a>
 </div>
 
