--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,30 +1,18 @@
 :host {
   width: inherit;
-  // height: 120px;
+  height: calc(2 * var(--var-size-13));
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: var(--var-spacing-3) var(--var-spacing-9);
-  // background: #d7e3ff99; //var(--mat-sys-primary-container);
   box-shadow: 0 -0.5px var(--box-shadow-light);
-  // box-shadow: 0 -0.5px var(--box-shadow-light);
   align-items: center;
+  user-select: none;
 
   .container-left {
     .headline {
-      // font-size: var(--var-size-3);
       font-weight: 600;
-    }
-  }
-
-  a {
-    text-decoration: none;
-    p {
       color: var(--mat-sys-on-secondary-container);
-      font-size: var(--var-size-2);
-      font-weight: 300;
-    }
-    p:hover {
-      color: var(--mat-sys-secondary);
+      font-size: var(--var-size-1);
     }
   }
 }
