--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -6,5 +6,5 @@
   overflow-y: auto;
   flex-direction: column;
   align-items: center;
-  padding: var(--var-spacing-11);
+  padding-top: calc(100% / 8);
 }
