feat: add reusable medium shadow

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -30,4 +30,6 @@
 
   --box-shadow-light: 4px rgba(0, 0, 0, 0.1);
   --box-shadow-medium: 5px rgba(0, 0, 0, 0.2);
+
+  --shadow-size-light: 1.5px;
 }
