--- a/src/pages/jokes-page/jokes-page.scss
+++ b/src/pages/jokes-page/jokes-page.scss
@@ -1,5 +1,7 @@
 :host {
+  height: inherit;
+  width: 50%;
   display: flex;
   flex-direction: column;
-  gap: var(--var-spacing-9);
+  gap: var(--var-spacing-12);
 }
