--- a/src/components/generation-card/generation-card.html
+++ b/src/components/generation-card/generation-card.html
@@ -6,5 +6,5 @@
     <ng-content select="[generation-card-content]" />
     <ng-content select="[generation-card-action]" />
   </mat-card-content>
-  <mat-card-footer class="example-card-footer"></mat-card-footer>
+  <mat-card-footer></mat-card-footer>
 </mat-card>
