--- a/src/pages/favourites-page/favourites-page.scss
+++ b/src/pages/favourites-page/favourites-page.scss
@@ -1,6 +1,6 @@
 :host {
   height: inherit;
-  width: inherit;
+  width: 70%;
   display: flex;
   flex-direction: column;
   gap: var(--var-spacing-12);
