feat: modernize article page

--- a/src/components/about-section/about-section.html
+++ b/src/components/about-section/about-section.html
@@ -1,9 +1,9 @@
-<div class="about-me">
+<div class="content-wrapper">
   <h1>Über Mich</h1>
   <article>
     <!-- Section about me -->
     <h2>Vorstellung</h2>
-    <p class="animate-about-me">Ich bin Chuck Norris, ein Kampfsportler und Schauspieler. Vor allem aber, wurde ich für meine Rollen in Actionfilmen bekannt.</p>
+    <p>Ich bin Chuck Norris, ein Kampfsportler und Schauspieler. Vor allem aber, wurde ich für meine Rollen in Actionfilmen bekannt.</p>
     <p>Die "Chuck Norris Facts" wurden populär, weil sie meine Actionhelden-Persönlichkeit humorvoll übertrieben und im Internet viral verbreitet wurden.</p>
   </article>
 
