--- a/src/components/about-section/about-section.scss
+++ b/src/components/about-section/about-section.scss
@@ -2,31 +2,20 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  gap: var(--var-spacing-8);
+  justify-content: center;
   padding: 0 var(--var-spacing-8) calc(100% / 5) var(--var-spacing-8);
 
-  .logo {
-    display: flex;
-    height: calc(1 * var(--var-size-15));
-    img {
-      height: 100%;
-    }
-  }
-
-  .about-me {
+  .content-wrapper {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: start;
     gap: var(--var-spacing-8);
     padding: var(--var-spacing-8);
-    background: #ffffff;
+    background: var(--mat-sys-surface-container-lowest);
     border-radius: 15px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px var(--box-shadow-medium);
 
     article {
-      flex: 1;
       display: flex;
       flex-direction: column;
       gap: var(--var-spacing-3);
