--- a/src/styles/_material-overrides.scss
+++ b/src/styles/_material-overrides.scss
@@ -5,6 +5,8 @@ body {
 
   button[matButton] {
     border-radius: var(--mat-sys-corner-large);
+    box-shadow: 0 var(--shadow-size-medium) var(--box-shadow-medium);
+
     p {
       font-size: var(--var-size-2);
     }
