feat: implemented animated welcoming section

--- a/src/components/animated-intro-section/animated-intro-section.html
+++ b/src/components/animated-intro-section/animated-intro-section.html
@@ -1,5 +1,5 @@
 <div class="container-text">
-  <div class="right-align">
+  <div class="right-align-wrapper animate-text">
     @switch (introStep()) { @case (0) {
     <!-- Welcome text -->
     <h1 class="animate-intro-1">Heyy 👋</h1>
@@ -18,7 +18,7 @@
     } @case (2) {
     <h1 class="animate-lets-go-1">Let's go!</h1>
     <p class="animate-lets-go-2">Starte zunächst mit der Ⅰ. Challenge.</p>
-    <p class="animate-lets-go-3">Ab Challenge Ⅰ.Ⅷ. darfst du meine About Section anpassen 😎.</p>
+    <p class="animate-lets-go-3">Ab Challenge Ⅰ.Ⅷ. darfst du den Abschnitt über mich erweitern 😎.</p>
     <a href="/home#aboutme"
       ><button matButton>
         <p>ÜBER MICH</p>
