refactor: change text to uppercase

--- a/src/components/animated-intro-section/animated-intro-section.html
+++ b/src/components/animated-intro-section/animated-intro-section.html
@@ -6,7 +6,7 @@
       <p class="animate-intro-1">Herzlich willkommen in der innFactory 😄! Ich bin Chuck Norris..</p>
     </div>
     <button (click)="nextIntroAnimation(refHTMLIntroAnimation[1])" matButton>
-      <p>weiter</p>
+      <p>WEITER</p>
     </button>
     } @case (1) {
     <div class="section-top">
@@ -16,7 +16,7 @@
       </p>
     </div>
     <button (click)="nextIntroAnimation(refHTMLIntroAnimation[2])" matButton>
-      <p>weiter</p>
+      <p>WEITER</p>
     </button>
     } @case (2) {
     <div class="section-top">
@@ -26,7 +26,7 @@
     </div>
     <a href="/home#aboutme">
       <button matButton>
-        <p>über mich</p>
+        <p>ÜBER MICH</p>
       </button>
     </a>
     } }
