--- a/src/components/chuck-jokes-card/chuck-jokes-card.scss
+++ b/src/components/chuck-jokes-card/chuck-jokes-card.scss
@@ -9,6 +9,7 @@
       flex-direction: row;
       justify-content: center;
       gap: var(--var-spacing-2);
+      padding-top: var(--var-spacing-3);
       > button {
         margin-top: var(--var-spacing-5);
       }
