--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -6,6 +6,6 @@
   overflow-y: auto;
   flex-direction: column;
   align-items: center;
-  padding-top: calc(100% / 8);
+  padding-top: var(--var-page-padding);
   scroll-behavior: smooth;
 }
