--- a/src/components/about-section/about-section.scss
+++ b/src/components/about-section/about-section.scss
@@ -10,10 +10,14 @@
     flex-direction: column;
     align-items: start;
     gap: var(--var-spacing-8);
-    padding: var(--var-spacing-8);
-    background: var(--mat-sys-surface-container-lowest);
+    padding: var(--var-spacing-12) var(--var-spacing-8);
     border-radius: var(--mat-sys-corner-large);
     box-shadow: 0 var(--shadow-size-medium) var(--box-shadow-medium);
+    background: var(--mat-sys-surface-container-lowest);
+
+    h1 {
+      padding-bottom: var(--var-spacing-2);
+    }
 
     article {
       display: flex;
