--- a/src/components/animated-intro-section/animated-intro-section.scss
+++ b/src/components/animated-intro-section/animated-intro-section.scss
@@ -1,60 +1,104 @@
 :host {
+  min-height: calc(100vh - var(--var-page-padding));
   width: inherit;
   display: flex;
-  flex-direction: row;
-  padding: 0 var(--var-spacing-10) calc(100% / 4) var(--var-spacing-10);
-  // gap: calc(0.5 * var(--var-spacing-9));
+  flex-direction: column;
+  justify-content: start;
 
-  .container-left,
-  .container-right {
-    flex: 1;
+  .container-layout {
+    position: relative;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    padding: var(--var-spacing-4);
-  }
+    width: inherit;
 
-  .container-left {
-    align-items: end;
-    .container-right-alignment {
-      text-align: left;
-      gap: var(--var-spacing-4);
-      .section-top {
-        width: calc(5.5 * var(--var-size-15));
-        // height: calc(1.8 * var(--var-size-15));
-        > h1 {
-          padding-bottom: var(--var-spacing-5);
-        }
-        > p {
-          padding-bottom: var(--var-spacing-3);
-        }
+    flex-direction: row;
+    // padding: 0 var(--var-spacing-10) calc(2 * var(--var-page-padding)) var(--var-spacing-10);
+    // gap: calc(0.5 * var(--var-spacing-9));
 
-        * {
-          opacity: 0;
+    .container-left,
+    .container-right {
+      width: 35%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: var(--var-spacing-4);
+    }
+
+    .container-left {
+      align-items: end;
+      .container-right-alignment {
+        width: 100%;
+        text-align: left;
+        .section-top {
+          padding-bottom: var(--var-spacing-7);
+          width: 90%;
+          > h1 {
+            font-size: var(--var-size-12);
+          }
+          > h1 + h1 {
+            margin-top: var(--var-spacing-7);
+          }
+          > h1 + p {
+            margin-top: var(--var-spacing-10);
+          }
+          > p {
+            font-size: var(--var-size-4);
+            padding-bottom: var(--var-spacing-3);
+          }
+          * {
+            opacity: 0;
+          }
         }
       }
     }
-  }
 
-  .container-right {
-    align-items: center;
-    figure {
-      width: calc(4 * var(--var-size-15));
-      border-radius: var(--mat-sys-corner-large);
-      img {
-        width: inherit;
+    .container-right {
+      align-items: center;
+      figure {
+        width: calc(4 * var(--var-size-15));
         border-radius: var(--mat-sys-corner-large);
-        box-shadow: 0 var(--shadow-size-medium) var(--box-shadow-medium);
-      }
-      figcaption {
-        padding: var(--var-spacing-2) var(--var-spacing-7);
-        font-size: small;
-        text-align: center;
-        p {
-          color: var(--mat-sys-primary);
-          text-decoration: underline;
+        img {
+          width: inherit;
+          border-radius: var(--mat-sys-corner-large);
+          box-shadow: 0 var(--shadow-size-medium) var(--box-shadow-medium);
+        }
+        figcaption {
+          padding: var(--var-spacing-2) var(--var-spacing-7);
+          text-align: center;
+          // display: inline;
+          > a {
+            display: inline;
+            > p {
+              color: var(--mat-sys-primary);
+              text-decoration: underline;
+            }
+          }
+          > p {
+            display: inline;
+            font-size: var(--var-size-1);
+            color: var(--mat-sys-on-secondary-container);
+          }
         }
       }
     }
   }
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.background {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: -1;
+  // opacity: 0.5;
 }
